umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_ZINC03815325.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 63
bond_count: 67
sum_formula: C25H31N4O3+1
graph6: ~??~hCGHC@?G?_@????_?G?@??CC????G??CG?@??@????_??@???B????_???G???@????C????G???AG?KO?A?????_????C?????A??????_?????C?????A??????O?????A??????C??????G??????C??????A???????O??????A???????A???????C???????A???????@????????A????????C????????G????????G????????G????????A?????????G?????????_????????@?????????@??????????_?????????G?????
