umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_atropWedgeError.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 32
sum_formula: C21N5O3
graph6: "\\hCGIG@?G?_A?@??_?O?G??C??G??G??C??@???G???_??@???@????_??AG@?a?G????"
