umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_canon_reorder1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 29
sum_formula: C20N8+4
graph6: "[hCGGC@?G?_@?@??_?G?@??C??G??G??C??@?G?GA?????@???@????_???K???@"
