umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_doravirine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 40
bond_count: 42
sum_formula: C17H11ClF3N5O3
graph6: ghDGH?@?G?_@?@?G_?G?C??C??G??G??C??@??AG??@???O???@?@??????G???A????Q????C????C?????G?????O????A?????A?????A??????@??????G??????_??
